--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/43508c6775.js" crossorigin="anonymous"></script>
 
     <title>Strolly</title>
   </head>
